helper function added

--- a/news_scrape.ipynb
+++ b/news_scrape.ipynb
@@ -20,6 +20,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, 'C:/Users/Woon/Desktop/Columbia/Applied Analytics/Term3/Sentiment_SNP')\n",
+    "\n",
+    "import helper_functions\n",
+    "from helper_functions import *"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -244,6 +257,20 @@
     "df['Sentiment'] = -2\n",
     "df = pd.DataFrame(list(zip(df['Headline'], df['Sentiment'])), columns=['Headline', 'Sentiment'])\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = []\n",
+    "\n",
+    "for string in df['Headline']:\n",
+    "    i.append(count_words(string))\n",
+    "\n",
+    "df['word_count'] = i\n"
    ]
   },
   {
