--- a/news_scrape.ipynb
+++ b/news_scrape.ipynb
@@ -320,148 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Headline</th>\n",
-       "      <th>Sentiment</th>\n",
-       "      <th>word_count</th>\n",
-       "      <th>Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td></td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.748121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Home</td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.999754</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>News</td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.995954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Screener</td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.988490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Maps</td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>privacy</td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993734</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>help</td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.989271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>Do Not Sell My Data</td>\n",
-       "      <td>NEGATIVE</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.998062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>Privacy Settings</td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.628221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>Learn more about FINVIZ*Elite</td>\n",
-       "      <td>POSITIVE</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.986288</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>205 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          Headline Sentiment  word_count     Score\n",
-       "0                                   POSITIVE           1  0.748121\n",
-       "1                             Home  POSITIVE           1  0.999754\n",
-       "2                             News  POSITIVE           1  0.995954\n",
-       "3                         Screener  POSITIVE           1  0.988490\n",
-       "4                             Maps  POSITIVE           1  0.993928\n",
-       "..                             ...       ...         ...       ...\n",
-       "200                        privacy  POSITIVE           1  0.993734\n",
-       "201                           help  POSITIVE           1  0.989271\n",
-       "202            Do Not Sell My Data  NEGATIVE           5  0.998062\n",
-       "203               Privacy Settings  POSITIVE           2  0.628221\n",
-       "204  Learn more about FINVIZ*Elite  POSITIVE           4  0.986288\n",
-       "\n",
-       "[205 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +463,238 @@
        "[73 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Headline</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>word_count</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Larry Kudlow: Former Israel Prime Minister Ben...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.994342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Swedbank sees income growth outpacing costs as...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.930149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Stocks making the biggest moves after hours: M...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.937492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Madison Square Garden changes spinoff plans, f...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.984254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>'We don’t lay off people’: This is how Bank of...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.991812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Ronaldo watches from bench as replacement scor...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.993943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>South Korea Debt Crisis Is a Cautionary Tale a...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.985807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>4 financial moves if you have — or are worried...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.951533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>Job growth spikes in November, interest rates ...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.980353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Morocco stuns Spain in penalty shootout to rea...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.973517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>Stocks making the biggest moves midday: Textro...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.771706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>Egypt’s Foreign Reserves Edge Up Slightly as I...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.896661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>Canada's Ivey PMI shows activity growing at fa...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.993677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>Biden's Climate Change War Picks Up Steam In M...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.994908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>Macy's: Best Department Store Bond To Play On ...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.998369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>Inflation Roars Back in the EU With New Highs ...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.992391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>Pro Golfer Anne van Dam on the Business of Gol...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.998856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>Lewis Johnson of Capital Wealth Advisors on De...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.995001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>A quiet close to Friday's trading but Dow Jone...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.961830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>Trading Psychology Advice - 2:  Pursue Your De...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.995112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>New Issue Now Available: What Hedge Funds Boug...</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.713816</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Headline Sentiment  word_count  \\\n",
+       "17   Larry Kudlow: Former Israel Prime Minister Ben...  POSITIVE          14   \n",
+       "22   Swedbank sees income growth outpacing costs as...  POSITIVE          12   \n",
+       "23   Stocks making the biggest moves after hours: M...  POSITIVE          15   \n",
+       "25   Madison Square Garden changes spinoff plans, f...  POSITIVE          11   \n",
+       "32   'We don’t lay off people’: This is how Bank of...  POSITIVE          17   \n",
+       "37   Ronaldo watches from bench as replacement scor...  POSITIVE          11   \n",
+       "43   South Korea Debt Crisis Is a Cautionary Tale a...  POSITIVE          14   \n",
+       "48   4 financial moves if you have — or are worried...  POSITIVE          14   \n",
+       "54   Job growth spikes in November, interest rates ...  POSITIVE          11   \n",
+       "60   Morocco stuns Spain in penalty shootout to rea...  POSITIVE          11   \n",
+       "66   Stocks making the biggest moves midday: Textro...  POSITIVE          13   \n",
+       "84   Egypt’s Foreign Reserves Edge Up Slightly as I...  POSITIVE          11   \n",
+       "86   Canada's Ivey PMI shows activity growing at fa...  POSITIVE          11   \n",
+       "124  Biden's Climate Change War Picks Up Steam In M...  POSITIVE          12   \n",
+       "142  Macy's: Best Department Store Bond To Play On ...  POSITIVE          12   \n",
+       "150  Inflation Roars Back in the EU With New Highs ...  POSITIVE          14   \n",
+       "174  Pro Golfer Anne van Dam on the Business of Gol...  POSITIVE          13   \n",
+       "184  Lewis Johnson of Capital Wealth Advisors on De...  POSITIVE          15   \n",
+       "187  A quiet close to Friday's trading but Dow Jone...  POSITIVE          12   \n",
+       "192  Trading Psychology Advice - 2:  Pursue Your De...  POSITIVE          12   \n",
+       "196  New Issue Now Available: What Hedge Funds Boug...  POSITIVE          11   \n",
+       "\n",
+       "        Score  \n",
+       "17   0.994342  \n",
+       "22   0.930149  \n",
+       "23   0.937492  \n",
+       "25   0.984254  \n",
+       "32   0.991812  \n",
+       "37   0.993943  \n",
+       "43   0.985807  \n",
+       "48   0.951533  \n",
+       "54   0.980353  \n",
+       "60   0.973517  \n",
+       "66   0.771706  \n",
+       "84   0.896661  \n",
+       "86   0.993677  \n",
+       "124  0.994908  \n",
+       "142  0.998369  \n",
+       "150  0.992391  \n",
+       "174  0.998856  \n",
+       "184  0.995001  \n",
+       "187  0.961830  \n",
+       "192  0.995112  \n",
+       "196  0.713816  "
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +702,7 @@
    "source": [
     "df2 = df[df['word_count'] > 10]\n",
     "df2\n",
-    "#df[df['Sentiment'] == 'POSITIVE']"
+    "df2[df2['Sentiment'] == 'POSITIVE']"
    ]
   },
   {
