--- a/yahoo_news_scrape.ipynb
+++ b/yahoo_news_scrape.ipynb
@@ -5,7 +5,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import bs4 as bs\n",
+    "import pickle\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_sp500_tickers():\n",
+    "    resp = requests.get('http://en.wikipedia.org/wiki/List_of_S%26P_500_companies')\n",
+    "    soup = bs.BeautifulSoup(resp.text, 'lxml')\n",
+    "    table = soup.find('table', {'class': 'wikitable sortable'})\n",
+    "    tickers = []\n",
+    "    for row in table.findAll('tr')[1:]:\n",
+    "        ticker = row.findAll('td')[0].text\n",
+    "        tickers.append(ticker)\n",
+    "\n",
+    "    with open(\"sp500tickers.pickle\",\"wb\") as f:\n",
+    "        pickle.dump(tickers,f)\n",
+    "\n",
+    "    return tickers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_sp500_tickers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bs4 as bs\n",
+    "import datetime as dt\n",
+    "import os\n",
+    "import pandas_datareader.data as web\n",
+    "import pickle\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save_sp500_tickers()\n",
+    "def get_data_from_yahoo(reload_sp500=False):\n",
+    "    if reload_sp500:\n",
+    "        tickers = save_sp500_tickers()\n",
+    "    else:\n",
+    "        with open(\"sp500tickers.pickle\", \"rb\") as f:\n",
+    "            tickers = pickle.load(f)\n",
+    "    if not os.path.exists('stock_dfs'):\n",
+    "        os.makedirs('stock_dfs')\n",
+    "        \n",
+    "    start = dt.datetime(2010, 1, 1)\n",
+    "    end = dt.datetime.now()\n",
+    "    for ticker in tickers:\n",
+    "        # just in case your connection breaks, we'd like to save our progress!\n",
+    "        if not os.path.exists('stock_dfs/{}.csv'.format(ticker)):\n",
+    "            df = web.DataReader(ticker, 'morningstar', start, end)\n",
+    "            df.reset_index(inplace=True)\n",
+    "            df.set_index(\"Date\", inplace=True)\n",
+    "            df = df.drop(\"Symbol\", axis=1)\n",
+    "            df.to_csv('stock_dfs/{}.csv'.format(ticker))\n",
+    "        else:\n",
+    "            print('Already have {}'.format(ticker))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_data_from_yahoo()"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +102,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.1"
   },
   "orig_nbformat": 4,
