--- a/yahoo_news_scrape.ipynb
+++ b/yahoo_news_scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_sp500_tickers()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +67,8 @@
     "    for ticker in tickers:\n",
     "        # just in case your connection breaks, we'd like to save our progress!\n",
     "        if not os.path.exists('stock_dfs/{}.csv'.format(ticker)):\n",
-    "            df = web.DataReader(ticker, 'morningstar', start, end)\n",
+    "            print(ticker)\n",
+    "            df = web.DataReader(ticker, 'yahoo', start, end)\n",
     "            df.reset_index(inplace=True)\n",
     "            df.set_index(\"Date\", inplace=True)\n",
     "            df = df.drop(\"Symbol\", axis=1)\n",
@@ -90,9 +82,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "get_data_from_yahoo()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
