--- a/Yahoo_finance_stock_market_news_scrape.ipynb
+++ b/Yahoo_finance_stock_market_news_scrape.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "from urllib.request import Request, urlopen"
+    "from urllib.request import Request, urlopen\n",
+    "import socket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,46 +24,26 @@
     "headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
     "cookies = {\"CONSENT\": \"YES+cb.20210720-07-p0.en+FX+410\"}\n",
     "\n",
-    "response = requests.get(my_url, headers=headers)"
+    "response = Request(my_url, headers=headers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "response.ok : True , response.status_code : 200\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"response.ok : {} , response.status_code : {}\".format(response.ok , response.status_code))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_page(url):\n",
     "    \"\"\"Download a webpage and return a beautiful soup doc\"\"\"\n",
-    "    response = requests.get(url, headers=headers)\n",
-    "    if not response.ok:\n",
-    "        print('Status code:', response.status_code)\n",
-    "        raise Exception('Failed to load page {}'.format(url))\n",
-    "    page_content = response.text\n",
-    "    doc = BeautifulSoup(page_content, 'html.parser')\n",
+    "    response = Request(url, headers=headers)\n",
+    "    page_content = urlopen(response).read() \n",
+    "    doc = BeautifulSoup(page_content)\n",
     "    return doc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +52,7 @@
        "<title>Latest Stock Market News</title>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,47 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Woon\\Desktop\\Columbia\\Applied Analytics\\Term3\\Sentiment_SNP\\Yahoo_finance_stock_market_news_scrape.ipynb Cell 8\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Woon/Desktop/Columbia/Applied%20Analytics/Term3/Sentiment_SNP/Yahoo_finance_stock_market_news_scrape.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(div_tags[\u001b[39m1\u001b[39;49m])\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(div_tags[1])"
+    "#print(div_tags[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Source:  Motley Fool\n",
-      "Head Line : 2 Dividend Aristocrats to Buy for 2023\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Source: \", div_tags[1].find('div').text)\n",
-    "print(\"Head Line : {}\".format(div_tags[1].find('a').text))"
+    "#print(\"Source: \", div_tags[1].find('div').text)\n",
+    "#print(\"Head Line : {}\".format(div_tags[1].find('a').text))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -281,10 +241,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Business</td>\n",
-       "      <td>Carvana stock tumbles 43%, books worst day on ...</td>\n",
-       "      <td>https://finance.yahoo.com/m/dcbea83b-1b00-3fd8...</td>\n",
-       "      <td>Shares of the used-car retailer logged the wor...</td>\n",
-       "      <td>https://s.yimg.com/uu/api/res/1.2/SDvaPY8bADKV...</td>\n",
+       "      <td>Stock Market Holidays 2022: Is Wall Street Clo...</td>\n",
+       "      <td>https://finance.yahoo.com/m/ffc04835-c206-33ff...</td>\n",
+       "      <td>Take a look at this list of stock market holid...</td>\n",
+       "      <td>https://s.yimg.com/uu/api/res/1.2/ruyhBIrFwOrK...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Business</td>\n",
+       "      <td>These Are The Top 5 China Stocks To Buy And Wa...</td>\n",
+       "      <td>https://finance.yahoo.com/m/10c9e207-b808-3447...</td>\n",
+       "      <td>Chinese stocks are rebounding with Covid curbs...</td>\n",
+       "      <td>https://s.yimg.com/uu/api/res/1.2/x4Xx7YiE3YiX...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -292,19 +260,23 @@
       ],
       "text/plain": [
        "     source                                           headline  \\\n",
-       "0  Business  Carvana stock tumbles 43%, books worst day on ...   \n",
+       "0  Business  Stock Market Holidays 2022: Is Wall Street Clo...   \n",
+       "1  Business  These Are The Top 5 China Stocks To Buy And Wa...   \n",
        "\n",
        "                                                 url  \\\n",
-       "0  https://finance.yahoo.com/m/dcbea83b-1b00-3fd8...   \n",
+       "0  https://finance.yahoo.com/m/ffc04835-c206-33ff...   \n",
+       "1  https://finance.yahoo.com/m/10c9e207-b808-3447...   \n",
        "\n",
        "                                             content  \\\n",
-       "0  Shares of the used-car retailer logged the wor...   \n",
+       "0  Take a look at this list of stock market holid...   \n",
+       "1  Chinese stocks are rebounding with Covid curbs...   \n",
        "\n",
        "                                               image  \n",
-       "0  https://s.yimg.com/uu/api/res/1.2/SDvaPY8bADKV...  "
+       "0  https://s.yimg.com/uu/api/res/1.2/ruyhBIrFwOrK...  \n",
+       "1  https://s.yimg.com/uu/api/res/1.2/x4Xx7YiE3YiX...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
