--- a/Yahoo_finance_stock_market_news_scrape.ipynb
+++ b/Yahoo_finance_stock_market_news_scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,21 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_page(url):\n",
     "    \"\"\"Download a webpage and return a beautiful soup doc\"\"\"\n",
-    "    response = Request(url, headers=headers)\n",
-    "    page_content = urlopen(response).read() \n",
+    "    response = requests.get(url, headers=headers, timeout=(3.05, 27))\n",
+    "    page_content = response.text \n",
     "    doc = BeautifulSoup(page_content)\n",
     "    return doc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "<title>Latest Stock Market News</title>"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -241,18 +241,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Business</td>\n",
-       "      <td>Stock Market Holidays 2022: Is Wall Street Clo...</td>\n",
-       "      <td>https://finance.yahoo.com/m/ffc04835-c206-33ff...</td>\n",
-       "      <td>Take a look at this list of stock market holid...</td>\n",
-       "      <td>https://s.yimg.com/uu/api/res/1.2/ruyhBIrFwOrK...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Business</td>\n",
-       "      <td>These Are The Top 5 China Stocks To Buy And Wa...</td>\n",
-       "      <td>https://finance.yahoo.com/m/10c9e207-b808-3447...</td>\n",
-       "      <td>Chinese stocks are rebounding with Covid curbs...</td>\n",
-       "      <td>https://s.yimg.com/uu/api/res/1.2/x4Xx7YiE3YiX...</td>\n",
+       "      <td>Asia stocks edge up despite global growth worries</td>\n",
+       "      <td>https://finance.yahoo.com/news/asia-stocks-edg...</td>\n",
+       "      <td>Asian equities edged higher on Thursday, propp...</td>\n",
+       "      <td>https://s.yimg.com/uu/api/res/1.2/.sKjuCMiYf_1...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -260,23 +252,19 @@
       ],
       "text/plain": [
        "     source                                           headline  \\\n",
-       "0  Business  Stock Market Holidays 2022: Is Wall Street Clo...   \n",
-       "1  Business  These Are The Top 5 China Stocks To Buy And Wa...   \n",
+       "0  Business  Asia stocks edge up despite global growth worries   \n",
        "\n",
        "                                                 url  \\\n",
-       "0  https://finance.yahoo.com/m/ffc04835-c206-33ff...   \n",
-       "1  https://finance.yahoo.com/m/10c9e207-b808-3447...   \n",
+       "0  https://finance.yahoo.com/news/asia-stocks-edg...   \n",
        "\n",
        "                                             content  \\\n",
-       "0  Take a look at this list of stock market holid...   \n",
-       "1  Chinese stocks are rebounding with Covid curbs...   \n",
+       "0  Asian equities edged higher on Thursday, propp...   \n",
        "\n",
        "                                               image  \n",
-       "0  https://s.yimg.com/uu/api/res/1.2/ruyhBIrFwOrK...  \n",
-       "1  https://s.yimg.com/uu/api/res/1.2/x4Xx7YiE3YiX...  "
+       "0  https://s.yimg.com/uu/api/res/1.2/.sKjuCMiYf_1...  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
