--- a/yf_news_scrape.ipynb
+++ b/yf_news_scrape.ipynb
@@ -12,6 +12,7 @@
     "from urllib.parse import urljoin\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "from datetime import date\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -156,6 +157,7 @@
     }
    ],
    "source": [
+    "print(date.today())\n",
     "YAHOO_NEWS_URL = 'https://finance.yahoo.com/topic/stock-market-news/'\n",
     "news_df = scrape_yahoo_news(YAHOO_NEWS_URL)"
    ]
@@ -9441,7 +9443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
